<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_events">

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.digitalthunder.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>

    <fragment
            android:id="@+id/navigation_events"
            android:name="com.digitalthunder.ui.events.EventsFragment"
            android:label="@string/title_events"
            tools:layout="@layout/fragment_events"/>

    <fragment
            android:id="@+id/navigation_opportunities"
            android:name="com.digitalthunder.ui.opportunities.OpportunitiesFragment"
            android:label="@string/title_opportunities"
            tools:layout="@layout/fragment_opportunities"/>

    <fragment
            android:id="@+id/navigation_chats"
            android:name="com.digitalthunder.ui.chats.ChatsFragment"
            android:label="@string/title_chats"
            tools:layout="@layout/fragment_chats"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.digitalthunder.ui.settings.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings"/>

</navigation>