<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_span="1"
    android:orientation="vertical"
    tools:context=".user.LoginActivity">

    <ImageView
        android:id="@+id/tyumenLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/entryTextEMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@mipmap/tyumen_logo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/entryTextEMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/entryTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tyumenLogo"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:background="@color/colorWhite"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:digits="@string/digitsPassword"
        android:id="@+id/entryTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/entryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryTextEMail"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:background="@color/colorWhite"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_show_pass"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <Button
        android:id="@+id/entryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/resetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryTextPassword"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="13sp"
        android:theme="@style/Theme.MyApp.EntryActivityButtons"
        android:background="@drawable/button_style_login"/>

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/entryProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryButton"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:singleLine="true"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:gravity="top"
        android:text="@string/login_reset_password"
        android:textAlignment="center"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        tools:ignore="RtlCompat" />

    <ProgressBar
        android:id="@+id/entryProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/askToRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/askToRegistration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/registrationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryProgressBar"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="bottom"
        android:text="@string/registration_ask"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askToRegistration"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="13sp"
        android:theme="@style/Theme.MyApp.EntryActivityButtons"
        android:background="@drawable/button_style_login"/>


</androidx.constraintlayout.widget.ConstraintLayout>