<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.RegistrationActivity"
        android:theme="@style/Theme.MyApp.AppCompat">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/registrationUserProfilePicture"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/registrationEmail"
            android:src="@mipmap/profile_picture_circle"
            android:elevation="1dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/setProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/registrationUserProfilePicture"
            app:layout_constraintEnd_toEndOf="@id/registrationUserProfilePicture"
            android:src="@drawable/ic_set_profile_picture"
            android:backgroundTint="@color/primary_light"
            android:tint="@color/primary_dark"
            app:borderWidth="0dp"
            app:fabSize="mini"
            android:elevation="2dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/registrationEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/registration_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationUserProfilePicture"
            app:layout_constraintBottom_toTopOf="@+id/registrationFirstName"
            app:layout_constraintHorizontal_bias="0.5"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:digits="@string/digitsName"
            android:id="@+id/registrationFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textCapWords"
            android:hint="@string/registration_first_name"
            app:layout_constraintBottom_toTopOf="@+id/registrationSecondName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationEmail"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:digits="@string/digitsName"
            android:id="@+id/registrationSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textCapWords"
            android:hint="@string/registration_second_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationFirstName"
            app:layout_constraintBottom_toTopOf="@+id/registrationPassword"
            app:layout_constraintHorizontal_bias="0.5"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:digits="@string/digitsPassword"
            android:id="@+id/registrationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            android:hint="@string/registration_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationSecondName"
            app:layout_constraintBottom_toTopOf="@+id/registrationRepeatPassword"
            app:layout_constraintHorizontal_bias="0.5"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:digits="@string/digitsPassword"
            android:id="@+id/registrationRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            android:hint="@string/registration_repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationPassword"
            app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
            app:layout_constraintHorizontal_bias="0.5"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    <ProgressBar
        android:id="@+id/registrationProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
        android:layout_margin="8dp"
        android:visibility="gone" />

    <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/registrationRepeatPassword"
            app:layout_constraintBottom_toBottomOf="@id/registrationProgressBar"
            android:layout_marginTop="60dp"
            android:text="@string/create_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>